--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
+#root, body, html{
+  height:100%;
+  margin: 0;
+  zoom: 100%;
+} 
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
